add search metadata api
